# picturize-ai

./: .gitignore  README.md  pyproject.toml
src/summarizer_crew/: crew.py  main.py
src/summarizer_crew/config/: agents.yaml  tasks.yaml
