[project]
name = "summarizer_crew"
version = "0.1.0"
description = "summarizer-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
summarizer_crew = "summarizer_crew.main:run"
run_crew = "summarizer_crew.main:run"
train = "summarizer_crew.main:train"
replay = "summarizer_crew.main:replay"
test = "summarizer_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
